Overdue Marker are now set at the beginning of the build